--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3283,68 +3283,6 @@ body {
 .cid-qXbTpi2fMm .dropdown-item:hover {
   color: #767676 !important;
 }
-.cid-qXcmNAl91l {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-qXcmNAl91l .mbr-slider .carousel-control {
-  background: #1b1b1b;
-}
-.cid-qXcmNAl91l .mbr-slider .carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-qXcmNAl91l .mbr-slider .carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-qXcmNAl91l .mbr-slider .modal-body .close {
-  background: #1b1b1b;
-}
-.cid-qXcmNAl91l .mbr-gallery-item > div::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #c2deb9;
-  background: linear-gradient(to left, #c2deb9, #45505b) !important;
-  opacity: 0;
-  -webkit-transition: 0.2s opacity ease-in-out;
-  transition: 0.2s opacity ease-in-out;
-}
-.cid-qXcmNAl91l .mbr-gallery-item > div:hover .mbr-gallery-title::before {
-  background: transparent !important;
-}
-.cid-qXcmNAl91l .mbr-gallery-item > div:hover:before {
-  opacity: 0.7 !important;
-}
-.cid-qXcmNAl91l .mbr-gallery-title {
-  font-size: .9em;
-  position: absolute;
-  display: block;
-  width: 100%;
-  bottom: 0;
-  padding: 1rem;
-  color: #fff;
-  z-index: 2;
-}
-.cid-qXcmNAl91l .mbr-gallery-title:before {
-  content: " ";
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  position: absolute;
-  background: #c2deb9 !important;
-  background: linear-gradient(to left, #c2deb9, #45505b) !important;
-  opacity: 0.7;
-  -webkit-transition: 0.2s background ease-in-out;
-  transition: 0.2s background ease-in-out;
-}
 .cid-qXcnLhFrIy {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -3968,6 +3906,9 @@ body {
   overflow: hidden;
 }
 .cid-qYYPKgaFEp P {
+  text-align: center;
+}
+.cid-qYYPKgaFEp .card-title {
   text-align: center;
 }
 .cid-qYYNlunyPY {
